--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-APP_ENV=local
-APP_DEBUG=true
+APP_ENV=production
+APP_DEBUG=false
 APP_KEY=base64:o2q5qsT0iVY/vUdMNLJeyB5L1msJW0mxfjzmONOeDeU=
 APP_URL=http://localhost
 
 DB_CONNECTION=pgsql
-DB_HOST=ec2-107-20-174-127.compute-1.amazonaws.com:
+DB_HOST=ec2-107-20-174-127.compute-1.amazonaws.com
 
 DB_PORT=5432
 DB_DATABASE=dbrd5op0e454nv
