--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-APP_ENV=production
-APP_DEBUG=false
+APP_ENV=local
+APP_DEBUG=true
 APP_KEY=base64:o2q5qsT0iVY/vUdMNLJeyB5L1msJW0mxfjzmONOeDeU=
 APP_URL=http://localhost
 
-DB_CONNECTION=pgsql
-DB_HOST=ec2-107-20-174-127.compute-1.amazonaws.com
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
 
-DB_PORT=5432
-DB_DATABASE=dbrd5op0e454nv
-DB_USERNAME=vetrkxegxpmasu
-DB_PASSWORD=n4Lfx58lG_zrSxUuBL8WEuFCj2
+DB_PORT=3306
+DB_DATABASE=notes_db
+DB_USERNAME=theroppex
+DB_PASSWORD=vladimir1
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
